--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
 body{
 font-family: 'Nunito', sans-serif;
 color: #363534;
+font-size: 1em;
 }
 
 /* ---------------------------
@@ -33,8 +34,11 @@ color: #363534;
   border-radius: 4px;
 }
 
+#user{
+  border-left: 1px solid #d6ddc9;
+}
 .fa{
-  margin-right: 4px;
+  margin: 4px;
 }
 .fa-bell, .fa-question-circle{
   color: #ac9140;
@@ -56,7 +60,7 @@ color: #007591;
  }
 .white-overlay{
   width: 80%;
-  height: 800px;
+  height: auto;
   padding: 15px;
   padding-bottom: 0px;
   background-color: #FFFFFF;
@@ -69,6 +73,9 @@ color: #007591;
 .heading{
   padding: 20px;
   font-weight: bold;
+}
+.p-div{
+  margin-top: 10px;
 }
 .btn-default{
   background-color: #a71931;
