changed stock image

--- a/style/style.css
+++ b/style/style.css
@@ -47,7 +47,7 @@ color: #007591;
  BACKGROUND-PIC
  ---------------------------------  */
  .jumbotron-fluid{
-   background-image: url("../img/background.jpg");
+   background-image: url("../img/image001.jpg");
    width: 100%;
    height: auto;
    background-position: center;
