--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 body{
 font-family: 'Nunito', sans-serif;
 color: #363534;
-font-size: 1em;
+overflow-x: hidden;
 }
 
 /* ---------------------------
@@ -24,6 +24,7 @@ font-size: 1em;
   text-transform: uppercase;
   font-weight:bold;
   font-size: 13px;
+  display: inline-flex;
 }
 .nav-link{
   color: #363534;
@@ -33,12 +34,11 @@ font-size: 1em;
   border-bottom: 7px solid #a71931;
   border-radius: 4px;
 }
-
-#user{
-  border-left: 1px solid #d6ddc9;
+a {
+   outline: 0;
 }
 .fa{
-  margin: 4px;
+  margin-right: 4px;
 }
 .fa-bell, .fa-question-circle{
   color: #ac9140;
@@ -74,9 +74,6 @@ color: #007591;
   padding: 20px;
   font-weight: bold;
 }
-.p-div{
-  margin-top: 10px;
-}
 .btn-default{
   background-color: #a71931;
   color: #FFFFFF;
@@ -85,3 +82,198 @@ color: #007591;
   font-weight: bold;
   width: 100%;
 }
+
+/*---------------------------------------
+            DOCUMENT0.html
+------------------------------------- */
+
+.sub-nav-container{
+text-align: center;
+padding: none;
+}
+.sub-nav li{
+  text-transform: uppercase;
+  font-weight:bold;
+  list-style: none;
+  display: inline-flex;
+  font-size: 13px;
+}
+.nav-link{
+  color: #363534;
+}
+.sub-nav a:hover {
+  color: #a71931;
+}
+
+.slash{
+  color: #888375;
+  margin-left:15px;
+}
+.slash-none{
+  color: #FFFFFF;
+  margin-left:15px;
+}
+.header-container{
+  width:91%
+}
+.header-text{
+  padding-top: 20px;
+  background-color: #a71931;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: 900;
+}
+.center-block{
+   margin-left: 40px;
+   margin-top: 40px;
+}
+
+.hilite{
+  background-color: #00759a;
+  color: #ac9140;
+  text-decoration: underline;
+}
+.underline{
+  color: #ac9140;
+  text-decoration: underline;
+
+}
+.your-voice-img{
+  width: 100%;
+  height: auto
+}
+.best-person{
+  margin-top: 10px;
+  /*width: 97.3%;*/
+  background-color: #00759a;
+  color: #FFFFFF;
+  padding-top: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
+}
+.best-person-text{
+  font-size: 15px;
+  padding-top:3px;
+}
+.my-voice{
+  margin-top: 10px;
+  /*width: 97.3%;*/
+  background-color: #e8e4d9;
+  height: 70px;
+}
+.heading2{
+  margin-top: 2.5%;
+  font-weight: 900;
+}
+/*-------------- form container ------------ */
+.form-container{
+  margin-top: 3%;
+}
+.form-heading{
+  font-weight: 900;
+}
+.nested-row-col-3{
+  margin-bottom: 20px;
+}
+#decision{
+color: #00759a;
+text-decoration: underline;
+}
+.reminder-heading{
+  background-color: #606d47;
+  color: #FFFFFF;
+}
+
+.reminder{
+  background-color: #d6ddc9;
+}
+.reminder-text{
+  margin-top: 10px;
+}
+.sub-reminder{
+  padding-top:7px;
+}
+
+.note-heading{
+  background-color: #888375;
+  color: #FFFFFF;
+}
+.note{
+  background-color: #e8e4d9;
+}
+.mind-heading{
+  background-color: #ac9140;
+  color: #FFFFFF;
+}
+.mind-text{
+  background-color:  #e9ddb9;
+}
+
+
+/* ---------------- FORM STYLES ---------------  */
+
+.fa-circle{
+color: orange;
+}
+.orange-heading{
+  font-weight: 900;
+}
+label{
+  background-color:#E8E8E8;
+  padding: 5px;
+  width:120px;
+}
+.form-inline{
+  margin-bottom: 20px;
+}
+.form-control {
+  background-color: #F8F8F8;
+  border: none;
+}
+.form-group{
+  margin:10px;
+}
+.full-input{
+  width: 150%
+}
+#lastname, #address{
+  width:50%;
+}
+.city-row input{
+  margin-right:10px;
+}
+.alternate-heading{
+  font-weight: 900;
+  margin-top: 10px;
+font-size: 12px;
+}
+#additionalnames{
+  width:40%;
+  height: 105px;
+}
+
+.checkbox-text{
+  margin-top: 20px;
+  margin-left: 40px;
+}
+#listhere{
+    width:40%;
+    height: 80px;
+}
+#yes-input{
+  height: 70px;
+  background-color: #EFEFEF
+}
+#section-6{
+  margin-bottom: 30px;
+}
+/*colors
+
+#888375 (g1)
+ #e8e4d9;(g2)
+ #606d47(g1)
+  #d6ddc9 (g2)
+ #ac9140 (y1)
+ #e9ddb9  (y2)
+ #00759a(Blue)
+*/
