--- a/style/style.css
+++ b/style/style.css
@@ -211,13 +211,19 @@ text-decoration: underline;
 
 
 /* ---------------- FORM STYLES ---------------  */
-
+.col-form{
+  margin-top: 15px;
+}
 .fa-circle{
 color: orange;
+}
+.fa-stack-1x{
+  color: #FFFFFF;
 }
 .orange-heading{
   font-weight: 900;
 }
+
 label{
   background-color:#E8E8E8;
   padding: 5px;
@@ -236,8 +242,14 @@ label{
 .full-input{
   width: 150%
 }
-#lastname, #address{
+.full-input-2{
+  width:200%;
+}
+#lastname, #address, #lastname1, #address1{
   width:50%;
+}
+.zip{
+  width:105px;
 }
 .city-row input{
   margin-right:10px;
@@ -251,7 +263,12 @@ font-size: 12px;
   width:40%;
   height: 105px;
 }
-
+.dropdown-toggle{
+  margin:3px;
+}
+.state{
+  margin-left:10px;
+}
 .checkbox-text{
   margin-top: 20px;
   margin-left: 40px;
@@ -260,13 +277,18 @@ font-size: 12px;
     width:40%;
     height: 80px;
 }
-#yes-input{
-  height: 70px;
-  background-color: #EFEFEF
-}
+
 #section-6{
   margin-bottom: 30px;
 }
+#section-6-input{
+  width:100%;
+  height: 70px;
+}
+.checkbox2{
+  padding: 4px;
+}
+
 /*colors
 
 #888375 (g1)
