--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
 
+html,body {
+    height:100%;
+}
 body{
 font-family: 'Nunito', sans-serif;
 color: #363534;
@@ -169,11 +172,15 @@ padding: none;
 .form-container{
   margin-top: 3%;
 }
+.form-group{
+  width: 90%;
+}
 .form-heading{
   font-weight: 900;
 }
 .nested-row-col-3{
   margin-bottom: 20px;
+  margin-left: 10px;
 }
 #decision{
 color: #00759a;
@@ -214,6 +221,7 @@ text-decoration: underline;
 .col-form{
   margin-top: 15px;
 }
+
 .fa-circle{
 color: orange;
 }
@@ -229,9 +237,7 @@ label{
   padding: 5px;
   width:120px;
 }
-.form-inline{
-  margin-bottom: 20px;
-}
+
 .form-control {
   background-color: #F8F8F8;
   border: none;
@@ -239,21 +245,16 @@ label{
 .form-group{
   margin:10px;
 }
-.full-input{
-  width: 150%
+
+.form-control >.lastname{
+  width: 80%;
 }
 .full-input-2{
   width:200%;
 }
-#lastname, #address, #lastname1, #address1{
-  width:50%;
-}
-.zip{
-  width:105px;
-}
-.city-row input{
-  margin-right:10px;
-}
+
+
+
 .alternate-heading{
   font-weight: 900;
   margin-top: 10px;
@@ -288,7 +289,33 @@ font-size: 12px;
 .checkbox2{
   padding: 4px;
 }
+form-inline {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
 
+.form-inline label {
+  margin: 5px 0px 5px 0px;
+}
+
+.form-inline input {
+  vertical-align: middle;
+  margin-right: 4px;
+}
+
+/* Responsive media */
+
+@media (max-width: 800px) {
+  .form-inline input {
+    margin: 8px 0;
+  }
+
+  .form-inline {
+    flex-direction: column;
+    align-items: stretch;
+  }
+}
 /*colors
 
 #888375 (g1)
