--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@ overflow-x: hidden;
 
 .nav li{
   text-transform: uppercase;
-  font-weight:bold;
+  font-weight:bold;-
   font-size: 13px;
   display: inline-flex;
 }
@@ -39,6 +39,9 @@ overflow-x: hidden;
 }
 a {
    outline: 0;
+}
+.active{
+  color: #a71931 !important;
 }
 .fa{
   margin-right: 4px;
@@ -87,7 +90,7 @@ color: #007591;
 }
 
 /*---------------------------------------
-            DOCUMENT0.html
+        mydocuments.html
 ------------------------------------- */
 
 .sub-nav-container{
