--- a/style/style.css
+++ b/style/style.css
@@ -144,7 +144,7 @@ padding: none;
   text-decoration: underline;
 
 }
-.your-voice-img{
+.your-img{
   width: 103%;
   height: auto
 }
@@ -156,6 +156,9 @@ padding: none;
   padding-top: 20px;
   padding-left: 30px;
   padding-right: 40px;
+}
+.best-heading{
+  font-weight:900;
 }
 .best-person-text{
   font-size: 15px;
@@ -324,6 +327,100 @@ input[type=checkbox] {
     width: 100%;
   }
 }
+
+/* ----------------------------------------------
+   yourvalues.html
+   ------------------------------------------  */
+
+   input[type=range]
+   {
+   -webkit-appearance:none;
+   width:100%;
+   background:transparent;
+   }
+   input[type=range]::-webkit-slider-thumb {
+   -webkit-appearance: none;
+   }
+   input[type=range]:focus {
+   outline: none;
+   /* Removes the blue border. */
+   }
+   /* Track Design */
+   input[type=range]::-webkit-slider-runnable-track{
+   width: 100%;
+   height: 15px;
+   cursor: pointer;
+   background: #007499;
+   border-radius: 4px;
+   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+   }
+   input[type=range]:focus::-webkit-slider-runnable-track {
+   background: #007499;
+   }
+   input[type=range]::-moz-range-track {
+   width: 600px;
+   height: 15px;
+   cursor: pointer;
+   background:#007499;
+   border-radius: 8px;
+   }
+   input[type=range]::-ms-track {
+   width: 600px;
+   height: 15px;
+   cursor: pointer;
+   background: transparent;
+   border-color: transparent;
+   border-width: 16px 0;
+   color: transparent;
+   }
+   input[type=range]::-ms-fill-lower {
+   background: #2a6495;
+   border: 0.2px solid #010101;
+   border-radius: 2.6px;
+   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+   }
+   input[type=range]:focus::-ms-fill-lower {
+   background: #3071a9;
+   }
+   input[type=range]::-ms-fill-upper {
+   background: #3071a9;
+   border: 0.2px solid #010101;
+   border-radius: 2.6px;
+   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+   }
+   input[type=range]:focus::-ms-fill-upper {
+   background: #367ebd;
+   }
+   /* Thumb design */
+   input[type=range]::-webkit-slider-thumb{
+   -webkit-appearance: none;
+   height: 25px;
+   width: 25px;
+   border-radius: 50%;
+   background:#606c46;
+   cursor: pointer;
+   margin-top:-5px;
+   /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+   }
+   input[type=range]::-moz-range-thumb {
+   height: 25px;
+   width: 25px;
+   border-radius: 50%;
+   background: #606c46;
+   cursor: pointer;
+   }
+   /* All the same stuff for IE */
+   input[type=range]::-ms-thumb {
+   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+   height: 25px;
+   width: 25px;
+   border-radius: 50%;
+   background: #606c46;
+   cursor: pointer;
+   }
+
+
+
 /*colors
 
 #888375 (g1)
@@ -333,4 +430,8 @@ input[type=checkbox] {
  #ac9140 (y1)
  #e9ddb9  (y2)
  #00759a(Blue)
+
+slide range
+#606c46
+#007499
 */
