--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,6 @@
 
+
+
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
 
 html,body {
@@ -87,6 +89,7 @@ color: #007591;
   height: 52px;
   font-weight: bold;
   width: 100%;
+  margin-top: 10px;
 }
 
 /*---------------------------------------
@@ -177,6 +180,7 @@ padding: none;
 /*-------------- form container ------------ */
 .form-container{
   margin-top: 3%;
+  margin-bottom: 3%;
 }
 .form-group{
   width: 90%;
@@ -422,7 +426,24 @@ input[type=checkbox] {
    margin-top: 15px;
   height: 130px;
 }
-
+.previous-button{
+  color: #FFFFFF;
+  text-transform: uppercase;
+  height: 52px;
+  font-weight: bold;
+  width: 100%;
+  margin-top: 10px;
+  background-color: #d7d7d7;
+}
+.save-button{
+  color: #FFFFFF;
+  text-transform: uppercase;
+  height: 52px;
+  font-weight: bold;
+  width: 100%;
+  margin-top: 10px;
+  background-color: #898375;
+}
 
 /*colors
 
