--- a/style/style.css
+++ b/style/style.css
@@ -7,11 +7,15 @@
 
 /* font */
 
-@font-face {
-	font-family: "Avenir";
-	src: url(customfont/"avenirltstd-light.otf");
+@font-face
+{
+    font-family:'Avenir';
+    src:url('../font/avenirlight.woff'),
+		    url('../font/avenirlight.otf'),
+				url('../font/avenitlight.eot');
+		font-weight: normal;
+		 font-style: normal;
 }
-
 
 /*@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');*/
 
@@ -27,7 +31,7 @@ body {
 /* body */
 
 body {
-	font-family: "Avenir", sans-serif;
+	font-family: "Avenir", Arial;
 	color: var(--bodyfontcolor);
 	overflow-x: hidden;
 }
@@ -58,7 +62,7 @@ body {
 	background-color: var(--maroon);
 	color: #FFFFFF;
 	text-transform: uppercase;
-	height: 52px;
+	height: 62px;
 	font-weight: 600;
 	margin-top: 10px;
 }
@@ -331,7 +335,7 @@ a {
 	font-weight: 900;
 }
 
-.nested-row-col-3 {
+.nested-row-col3 {
 	margin-bottom: 20px;
 }
 
@@ -401,12 +405,15 @@ label {
 
 input[type=checkbox] {
 	transform: scale(1.2);
-	margin-top: 20px;
 }
-
-.checkbox-span {
-	padding: 8px;
-	margin-left: 4%;
+.form-check{
+  margin-left: 4%;
+}
+.form-check-label{
+  background-color: #FFFFFF;
+  width: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 
@@ -452,7 +459,7 @@ input[type=checkbox] {
 	margin-bottom: var(--lastdivimarginbottom);
 }
 
-#section-6-input {
+#section6-input {
 	width: 100%;
 	height: 20vh;
 }
