--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,7 @@ body {
 	font-family: "Avenir", Arial, sans-serif;
 	color: var(--bodyfontcolor);
 	overflow-x: hidden;
+  font-size: 1em;
 }
 
 :root {
@@ -434,23 +435,23 @@ input[type=checkbox] {
 #additionalnames-label {
   padding-top: 10px;
 	height: 148px;
-	width: 23%;
+	width: 25%;
   text-align: center;
 }
 
 #additionalnames-input {
 	height: 148px;
-	width: 71%;
+	width: 60%;
 }
 
 #limitationslist-label {
 	height: 148px;
-	width: 23%;
+	width: 25%;
 }
 
 #limitationslist {
 	height: 148px;
-	width: 72%
+	width: 60%
 }
 
 #listhere {
@@ -467,7 +468,9 @@ input[type=checkbox] {
 	height: 20vh;
 }
 
-
+#zip1, #zip2, #zip3{
+  width: 13%;
+}
 /* ----------------------------------------------
    yourvalues.html
    ------------------------------------------  */
